# urli5

./: README.md  pyproject.toml
urli5/: cli.py  text.py
urli5/website/: __init__.py  site.py
