[tool.poetry]
name = "urli5"
version = "0.1.0"
description = ""
authors = ["jinified <jinified@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
url2text = "urli5.text:main"
